welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:21: error: not found: value c
if(getCouleurSol()==c:Color){
                    ^SlugSnail:21: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
if(getCouleurSol()==c:Color){
                     ^